добавил eslint и  prettier

--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -4,7 +4,7 @@
     "menuToggle": "Открыть меню"
   },
   "navigation": {
-    "dashboard": "Дашборд",
+    "dashboard": "Главная",
     "trading": "Торговля",
     "analytics": "Аналитика",
     "profile": "Профиль"
