--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -4,7 +4,7 @@
     "menuToggle": "Open menu"
   },
   "navigation": {
-    "dashboard": "Dashboard",
+    "dashboard": "Main",
     "trading": "Trading",
     "analytics": "Analytics",
     "profile": "Profile"
